@@ -1,3 +1,8 @@
+2007-03-23  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/mio_tls.cc: fix bug in closing a socket
+    * jabberd/lib/str.cc: fix bug in XML escaping
+
 2007-03-19  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/lib/str.cc: fixing XML escaping error for character >
